# abc

./: .gitignore  arcium_install_warning.txt  magicblock_install_warning.txt  package-lock.json
micro_prediction/: .gitignore  ARCHITECTURE_CHECKLIST.md  ARCIUM_FULL_SETUP_COMPLETE.md  ARCIUM_REAL_INTEGRATION.md  ARCIUM_SETUP.md  Anchor.toml  BUILD_STATUS.md  Cargo.toml  DELEGATION_INTEGRATION.md  DEPLOYMENT_STATUS.md  FRESH_START_INSTRUCTIONS.md  FRONTEND_COMPLETE.md  MANUAL_SETUP.md  QUICKSTART.md  QUICK_START.md  RUN.md  SETUP_AND_DEPLOY.sh  package-lock.json  package.json  test-arcium-encryption.sh  test-pyth-realtime.js  vite.config.js
micro_prediction/app/: .env.example  package-lock.json  package.json  tsconfig.json
micro_prediction/app/.next/cache/eslint/: .cache_i80pf6
micro_prediction/app/public/idl/: micro_prediction.json
micro_prediction/app/src/app/: globals.css  layout.tsx  page.tsx
micro_prediction/app/src/components/: PredictionForm.tsx  PriceDisplay.tsx  RoundTimer.tsx  WalletProvider.tsx
micro_prediction/app/src/lib/: arcium.ts
micro_prediction/backend/: server.js
micro_prediction/docs/: ARCIUM_INTEGRATION.md
micro_prediction/encrypted-ixs/src/: lib.rs
micro_prediction/frontend/: README.md  app.html  arcium-encrypt.js  index.html  predictionClient.js
micro_prediction/programs/micro_prediction/: Cargo.toml
micro_prediction/programs/micro_prediction/src/: lib.rs
micro_prediction/relayer/: .env.example  arcium-client.js  index.js  package-lock.json  package.json
micro_prediction/scripts/: pyth_btc_stream.ts  pyth_hermes_stream.ts
micro_prediction/solana_include/: assert.h
micro_prediction/tests/: delegation.test.ts  micro_prediction.ts
