[workspace]
members = ["programs/*", "encrypted-ixs"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
[workspace.dependencies]
base64ct = "=1.6.0"

[patch.crates-io]
proc-macro2 = { git = 'https://github.com/arcium-hq/proc-macro2.git' }
getrandom = { path = "./vendor/getrandom-0.2.16", features = ["custom"] }
pyth-sdk-solana = { path = "../vendor/pyth-sdk-rs/pyth-sdk-solana" }
arcium-client = { path = "../vendor/arcium-client" }
ephemeral-rollups-sdk = { path = "../vendor/ephemeral-rollups-sdk" }
ephemeral-rollups-sdk-attribute-ephemeral = { path = "../vendor/ephemeral-rollups-sdk-attribute-ephemeral" }
ephemeral-rollups-sdk-attribute-commit = { path = "../vendor/ephemeral-rollups-sdk-attribute-commit" }
ephemeral-rollups-sdk-attribute-delegate = { path = "../vendor/ephemeral-rollups-sdk-attribute-delegate" }
magicblock-delegation-program = { path = "../vendor/magicblock-delegation-program" }
magicblock-magic-program-api = { path = "../vendor/magicblock-magic-program-api" }
