[package]
name = "micro_prediction"
version = "0.1.0"
description = "Created with Arcium & Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "micro_prediction"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
pyth-sdk-solana = { path = "../../../vendor/pyth-sdk-rs/pyth-sdk-solana", version = "0.10.6" }

borsh = "1.5.7"
borsh-derive = "1.5.7"
base64ct = "1.6.0"
getrandom = { version = "0.2", features = ["custom"] }
